smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-statement-invalid-id.smithy
// Parse error at line 6, column 16 near `!\n`: Expected a valid identifier character, but found '!'
$version: "1.0"

namespace smithy.example

use smithy.api#!
